# PolarHeartRateMonitor

./: .gitignore  README.md
src/: pyproject.toml  requirements.txt
src/backend/: api.py  pyproject.toml  test.py
src/backend/polar_bluetooth_interface/: data_streamer.py
src/bluetooth_interface/: requirements.txt
src/bluetooth_interface/polar-bluetooth-interface/connector/: bluetooth_connector.py
src/bluetooth_interface/polar-bluetooth-interface/scanner/: bluetooth_scanner.py
src/data-api/data-api-interface/: data_streamer.py
src/frontend/: Home.py
src/frontend/pages/: Bluetooth Scanner.py  Device Management.py  History.py  Live Heart Rate.py  Patient Management.py  test.py
src/frontend/utils/: background.py  bluetooth_connector.py  bluetooth_scanner.py  data_streamer.py
src/tests/: conftest.py
src/tests/unit/: test_bluetooth_connector.py  test_bluetooth_scanner.py  test_data_streamer.py
